# slm

./: .env.example  Dockerfile.txt  LICENSE.txt  README.md  USAGE.md  model.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
app/: personalities.py
app/api/v1/: router.py
examples/: run_conversation.py
examples/personas/: anomaly.yaml  archivist.yaml  courier.yaml  oracle.yaml  visionary.yaml  wanderer.yaml
integrations/: birdeye.ts  heliusFeed.ts
integrations/swarms/: swarmRouter.py
scripts/: prewarm.py
slm/env/: conversation_env.py  rewards.py
slm/insights/: init.py  service.py
slm/model/: memory.py  persona_encoder.py  slm_model.py  social_head.py  tokenizer.py
slm/training/: train_selfplay.py
slm/utils/: feature_flags.py  logging.py  sampling.py  tracer.py
src/: index.js  moderate.js  store.js
tests/: test_model.py  test_personas.py
